firefox/firefox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: firefox
  name: firefox
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: firefox
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: firefox
    spec:
      containers:
        - env:
            - name: FIREFOX_CLI
              value: https://www.linuxserver.io/
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/firefox:latest
          name: firefox
          ports:
            - containerPort: 3000
            - containerPort: 3001
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: firefox-claim0
      restartPolicy: Always
      volumes:
        - name: firefox-claim0
          persistentVolumeClaim:
            claimName: firefox-claim0
status: {}
