firefox/firefox-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: firefox
  name: firefox
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    io.kompose.service: firefox
status:
  loadBalancer: {}
