firefox/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: firefox-access-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      io.kompose.service: firefox
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
  - ports:
    - name: http 
      protocol: TCP
      port: 3000 
    - name: http2
      protocol: TCP 
      port: 3001
